# energy-transition-platform

./: .gitignore  docker-compose.override.yml  docker-compose.yml  env.example  explore_warehouse.ipynb  pyproject.toml
.agents/rules/: project-rules.md
.agents/skills/CI-CD-automation-specialist/: SKILL.md
.agents/skills/analytics-and-intelligence-specialist/: SKILL.md
.agents/skills/backend-and-ai-engineer/: SKILL.md
.agents/skills/data-pipeline-builder/: SKILL.md
.agents/skills/fastapi-builder/: SKILL.md
.agents/skills/frontend-and-visualization-specialist/: SKILL.md
.agents/skills/infrastructure-and-docker-orchestrator/: SKILL.md
.agents/skills/streamlit-builder/: SKILL.md
ingestion/: Dockerfile  pyproject.toml
ingestion/dags/: test_dag.py  tw_monthly_bronze_ingestion.py
ingestion/src/ingestion/ember/: ember_client.py
libs/logger/: pyproject.toml
libs/logger/src/logger/: __init__.py  logging.py
transform/: Dockerfile  dbt_project.yml  profiles.yml
transform/models/: sources.yml
transform/models/staging/: staging.yml  stg_ember__carbon_intensity.sql  stg_ember__demand.sql  stg_ember__generation.sql  stg_ember__installed_capacity.sql  stg_ember__power_sector_emission.sql
