[project]
name = "transitionwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ingestion",
    "logger",
]

[tool.uv.sources]
ingestion = { workspace = true }
logger = { workspace = true }

[tool.uv.workspace]
members = [
    "ingestion",
    "libs/logger",
]

[tool.uv]
package = false
