[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aung-Seth-Pai", email = "a.sethpai.net@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "logger",
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "requests>=2.33.0",
]

[tool.uv.sources]
logger = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
