[project]
name = "logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aung-Seth-Pai", email = "a.sethpai.net@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
